--- a/src/app/component/create/create.component.html
+++ b/src/app/component/create/create.component.html
@@ -1,1 +1,40 @@
-<p>create works!</p>
+<form class="submit-form" *ngIf="!isSubmitted; else myname">
+  
+  <div class="form-group">
+    <label for="id">ID</label>
+    <input type="text" class="form-control" id="id" placeholder="enter name" [(ngModel)]="setValue.id" name="id">
+</div>
+
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="enter name" [(ngModel)]="setValue.name" name="name">
+        </div>
+    
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email" [(ngModel)]="setValue.email" name="email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+    
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="Password" required [(ngModel)]="setValue.password" name="password">
+        </div>
+    
+        <div class="form-group">
+            <label for="login">Login</label>
+            <input type="text" class="form-control" id="login" placeholder="enter login" required [(ngModel)]="setValue.login" name="login">
+        </div>
+    
+        
+        <div class="form-group">
+            <label for="role">Role</label>
+            <input type="text" class="form-control" id="role" placeholder="enter role" required ="setValue.role" name="role">
+        </div>
+    
+        <br>
+        <button type="submit" class="btn btn-primary" (click)="setUser()">Submit</button> 
+ 
+        
+    </form>
+    <ng-template #myname>Ma'lumotlar Saqlandi</ng-template >
